# webgpu_fundamentals_c

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  create_surface.c  create_surface.h  ffmpeg.cmake  framework.c  framework.h  test_build.sh  video.c  video.h
01_fundamentals/: CMakeLists.txt  webgpu-simple-compute.c  webgpu-simple-triangle.c
02_inter-stage-variables/: CMakeLists.txt  inter_stage_variables_connect_by_location.c  inter_stage_variables_connect_by_location_part2.c  webgpu-inter-stage-variables-triangle.c
02_inter-stage-variables/res/: inter_stage_variables_connect_by_location.wgsl
03_uniforms/: CMakeLists.txt  webgpu-simple-triangle-uniforms-multiple.c  webgpu-simple-triangle-uniforms-split.c  webgpu-simple-triangle-uniforms.c
04_storage-buffers/: CMakeLists.txt  webgpu-simple-triangle-storage-buffer-split.c  webgpu-simple-triangle-storage-split-minimal-changes.c  webgpu-storage-buffer-vertices.c
04_storage-buffers/res/: shader.wgsl  webgpu-simple-triangle-storage-buffer-split.wgsl
05_vertex-buffers/: CMakeLists.txt  webgpu-vertex-buffers-2-attributes-8bit-colors.c  webgpu-vertex-buffers-2-attributes.c  webgpu-vertex-buffers-2-buffers.c  webgpu-vertex-buffers-index-buffer.c  webgpu-vertex-buffers.c
05_vertex-buffers/res/: shader.wgsl
06_textures/: CMakeLists.txt  webgpu-simple-textured-quad-linear.c  webgpu-simple-textured-quad-minfilter.c  webgpu-simple-textured-quad-mipmap.c  webgpu-simple-textured-quad-mipmapfilter.c  webgpu-simple-textured-quad.c
06_textures/res/: webgpu-simple-textured-quad-mipmap.wgsl
07_importing_images/: CMakeLists.txt  webgpu-simple-textured-quad-import-no-mips.c  webgpu-simple-textured-quad-import-video.c  webgpu-simple-textured-quad-import.c
07_importing_images/res/: textured_quad_shaders_for_mip_level_generation.wgsl
3d_math/: CMakeLists.txt
3d_math/01_translation/: CMakeLists.txt  webgpu-translation-prep.c  webgpu-translation.c
3d_math/01_translation/res/: shader.wgsl  webgpu-translation.wgsl
3d_math/02_rotation/: CMakeLists.txt  webgpu-rotation-via-unit-circle.c  webgpu-rotation.c
3d_math/02_rotation/res/: shader.wgsl
3d_math/03_scale/: CMakeLists.txt  webgpu-scale.c
3d_math/03_scale/res/: shader.wgsl
3d_math/04_matrix_math/: CMakeLists.txt  webgpu-matrix-math-transform-five-fs-3x3.c  webgpu-matrix-math-transform-just-matrix-3x3.c  webgpu-matrix-math-transform-move-origin-3x3.c  webgpu-matrix-math-transform-srt-3x3.c  webgpu-matrix-math-transform-trs-3x3.c  webgpu-matrix-math-transform-trs.c
3d_math/04_matrix_math/res/: shader.wgsl  webgpu-matrix-math-transform-just-matrix-3x3.wgsl
3d_math/05_orthographic_projection/: CMakeLists.txt  webgpu-orthographic-projection-step-1-flat-f.c  webgpu-orthographic-projection-step-2-3d-f.c  webgpu-orthographic-projection-step-3-colored-3d-f.c  webgpu-orthographic-projection-step-4-cullmode-back.c  webgpu-orthographic-projection-step-5-order-fixed.c  webgpu-orthographic-projection-step-6-depth-texture.c  webgpu-orthographic-projection-step-7-ortho.c
3d_math/05_orthographic_projection/res/: shader.wgsl  webgpu-orthographic-projection-step-3-colored-3d-f.wgsl
3d_math/06_perspective_projection/: CMakeLists.txt  webgpu-perspective-projection-step-1-fudge-factor.c  webgpu-perspective-projection-step-2-gpu-divide-by-w.c  webgpu-perspective-projection-step-3-perspective-z-to-w.c  webgpu-perspective-projection-step-4-perspective.c
3d_math/06_perspective_projection/res/: shader.wgsl  webgpu-perspective-projection-step-2-gpu-divide-by-w.wgsl  webgpu-perspective-projection-step-3-perspective-z-to-w.wgsl
3d_math/07_cameras/: CMakeLists.txt  webgpu-cameras-step-1-direct-math.c  webgpu-cameras-step-2-camera-aim.c  webgpu-cameras-step-3-look-at.c  webgpu-cameras-step-4-aim-Fs.c
basics/: CMakeLists.txt
basics/01_fundamentals/: CMakeLists.txt  webgpu-simple-compute.c  webgpu-simple-triangle.c
basics/02_inter-stage-variables/: CMakeLists.txt  webgpu-fragment-shader-builtin-position.c  webgpu-inter-stage-variables-triangle-by-fn-param.c  webgpu-inter-stage-variables-triangle.c
basics/02_inter-stage-variables/res/: checkerboard.wgsl  shader.wgsl
basics/03_uniforms/: CMakeLists.txt  webgpu-simple-triangle-uniforms-multiple.c  webgpu-simple-triangle-uniforms-split.c  webgpu-simple-triangle-uniforms.c
basics/04_storage-buffers/: CMakeLists.txt  webgpu-simple-triangle-storage-buffer-split.c  webgpu-simple-triangle-storage-split-minimal-changes.c  webgpu-storage-buffer-vertices.c
basics/05_vertex-buffers/: CMakeLists.txt  webgpu-vertex-buffers-2-attributes-8bit-colors.c  webgpu-vertex-buffers-2-attributes.c  webgpu-vertex-buffers-2-buffers.c  webgpu-vertex-buffers-index-buffer.c  webgpu-vertex-buffers.c
basics/06_textures/: CMakeLists.txt  webgpu-simple-textured-quad-linear.c  webgpu-simple-textured-quad-minfilter.c  webgpu-simple-textured-quad-mipmap.c  webgpu-simple-textured-quad-mipmapfilter.c  webgpu-simple-textured-quad.c
basics/07_importing_images/: CMakeLists.txt  webgpu-simple-textured-quad-import-no-mips.c  webgpu-simple-textured-quad-import-video.c  webgpu-simple-textured-quad-import.c
basics/07_importing_images/res/: webgpu-simple-textured-quad-import.wgsl
compute_shaders/: CMakeLists.txt
compute_shaders/01_compute_shaders_basics/: CMakeLists.txt  webgpu-compute-shaders-builtins.c
compute_shaders/01_compute_shaders_basics/res/: shader.wgsl
res/01_fundamentals/: shader.wgsl  webgpu-simple-compute.wgsl
res/03_uniforms/: webgpu-simple-triangle-uniforms-multiple.wgsl  webgpu-simple-triangle-uniforms-split.wgsl
res/04_storage-buffers/: webgpu-storage-buffer-vertices.wgsl
res/05_vertex-buffers/: webgpu-vertex-buffers-index-buffer.wgsl
res/07_importing_images/: shader.wgsl
triangle_/: CMakeLists.txt  main.c
